--- a/index.html
+++ b/index.html
@@ -65,5 +65,7 @@
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"></script>
   <script src="map.js"></script>
   <script src="index.js"></script>
-  <script></script>
+  <script>
+  console.log('This Script connected Js Connected ')
+</script>
 </html>
