--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         <option value="2">Ksk</option>
         <option value="2">Ksk</option>
       </select>
+      <!-- <div class="myLocation">
+        <h1 class="values">88979879879</h1>
+        <h1 class="values">88979879879</h1>
+      </div> -->
     </div>
 
     <div class="map_container">
@@ -65,7 +69,5 @@
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"></script>
   <script src="map.js"></script>
   <script src="index.js"></script>
-  <script>
-  console.log('This Script connected Js Connected ')
-</script>
+  <script></script>
 </html>
