--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     </a>
   </div> -->
   <!-- Navigation-->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#page-top"><img style="width:8.5rem"  src="logo.png" alt="" id="logo"></a>
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" >
+    <div class="container px-4 px-lg-5 " >
+        <a class="navbar-brand" href="https://salmannaeem112215.github.io/youngstr_website/"><img style="height: 80;"  src="mLogo.png" alt="" id="logo"></a>
         <div class="map_buttons">
           <select id="viewRoutes">
             <option class="options">Select Route</option>
@@ -69,6 +69,20 @@
 
   <div class="map_container">
     <div id="map"></div>
+    <div id="menu">
+      <label for="dark-v11">dark</label>
+      <input id="dark-v11" type="radio" name="rtoggle" value="dark" checked="checked">
+      
+      <label for="streets-v12">streets</label>
+      <input id="streets-v12" type="radio" name="rtoggle" value="streets">
+
+      <label for="satellite-streets-v12">satellite</label>
+      <input id="satellite-streets-v12" type="radio" name="rtoggle" value="satellite" >
+
+
+
+
+      </div>
     <div class="map-info">
       <div class="info_items">
         <h3> Select Route to see it Detail</h3>
