Added WEbsite color

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
     <div class="map-info">
       <div class="info_items">
-        <h3> Select Route to see it Detail</h3>
+        <h3> Select route to see its path</h3>
         <h3> Mobile Application is UnderConstruction</h3>
       </div>
     </div>
