--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" >
     <div class="container px-4 px-lg-5 " >
-        <a class="navbar-brand" href="https://salmannaeem112215.github.io/youngstr_website/"><img style="height: 80;"  src="mLogo.png" alt="" id="logo"></a>
+        <a class="navbar-brand" href="https://salmannaeem112215.github.io/youngstr_website/"><img  src="mLogo.png" alt="" id="logo"></a>
         <div class="map_buttons">
           <select id="viewRoutes">
             <option class="options">Select Route</option>
@@ -61,7 +61,7 @@
             <option class="options" value="15" disabled>Route-15</option>
           </select>
           <select id="markerLocation">
-            <option>Select Bus Stops</option>
+            <option>Select Stops</option>
           </select>
           </div> 
     </div>
@@ -69,7 +69,7 @@
 
   <div class="map_container">
     <div id="map"></div>
-    <div id="menu">
+    <!-- <div id="menu">
       <label for="dark-v11">dark</label>
       <input id="dark-v11" type="radio" name="rtoggle" value="dark" checked="checked">
       
@@ -82,7 +82,7 @@
 
 
 
-      </div>
+      </div> -->
     <div class="map-info">
       <div class="info_items">
         <h3> Select route to see its path</h3>
