--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a class="navbar-brand" href="https://salmannaeem112215.github.io/youngstr_website/"><img  src="mLogo.png" alt="" id="logo"></a>
         <div class="map_buttons">
           <select id="viewRoutes">
-            <option class="options">Select Route</option>
+            <option class="options">Selct Route</option>
             <option class="options" value="1" >Route-01</option>
             <option class="options" value="2" >Route-02</option>
             <option class="options" value="3">Route-03</option>
