--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Route-Map</title>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css" rel="stylesheet" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="style.css" />
-  <link href="bStyle.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/bStyle.css" />
+  <link href="css/style.css" rel="stylesheet" />
 
 
  
@@ -95,8 +95,8 @@
 </body>
 
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"></script>
-<script src="map.js"></script>
-<script src="index.js"></script>
+<script src="js/map.js"></script>
+<script src="js/index.js"></script>
 <script></script>
 
 </html>
