Added Find my location button icon

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
     <div class="map-info styleButtons">
       <div class="info_items styleButtons" style="margin: auto; text-align: center">
         <h3> Select route to see its path</h3>
-        <h3> Mobile Application is UnderConstruction</h3>
+        <h3> Turn-on Location by pressing Icon on Top-Right <img src="assets/images/findMyLocation.png" alt="" style="height: 30;"> </h3>
+        <h3> </h3>
+        
       </div>
     </div>
   </div>
